test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_if_else_stmt.draco
proc main() void : if a then a := 1; else a := 2; fi; corp;

