test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_fi_as_identifier.draco
int fi;
 
proc main() void : a := 1; corp;
